Add module-info.java to core and feast modules
- Core module lphy.beast: requires beast.base, beast.pkgmgmt, beast.labs,
  beast.classic, lphy.base, info.picocli, com.google.common, beagle;
  exports all packages; uses and provides all SPI interfaces
- Feast module lphy.beast.feast: requires lphy.beast, feast;
  provides LPhyBEASTExt and ValueHandler
- Add --add-exports for lphy.core.vectorization.array (not yet exported
  by lphy.core) in compiler and surefire config
- Make feast test self-contained (no test-jar dependency, incompatible
  with JPMS module boundaries)
- Extension modules bdtree, mc3, ma cannot have module-info.java yet:
  their BEAST deps lack module descriptors