@@ -83,6 +83,11 @@
                 <version>3.15.0</version>
                 <configuration>
                     <release>25</release>
+                    <compilerArgs>
+                        <!-- lphy.core does not export this package yet -->
+                        <arg>--add-exports</arg>
+                        <arg>lphy.core/lphy.core.vectorization.array=lphy.beast</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -129,6 +134,10 @@
                              beast-base's version.xml (embedded in the JAR) -->
                         <BEAST_PACKAGE_PATH>${io.github.compevol:beast-base:jar}</BEAST_PACKAGE_PATH>
                     </systemPropertyVariables>
+                    <argLine>
+                        --add-reads lphy.beast=ALL-UNNAMED
+                        --add-exports lphy.core/lphy.core.vectorization.array=lphy.beast
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
